--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,7 @@ env:
   LC_ALL: "en_US.UTF-8"
 
 jobs:
-  Explore-GitHub-Actions:
+  GitHub-Actions-CS4110:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
